--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^12.6.0",
     "moment": "^2.29.1",
     "react": "^17.0.1",
+    "react-countup": "^4.3.3",
     "react-dom": "^17.0.1",
     "react-numeral": "^1.0.1",
     "react-scripts": "4.0.1",
